ros2_ws/log/build_2024-10-07_00-45-02/visual_servo/stderr.log
  File "/home/swati/VBM/ros2_ws/install/visual_servo/lib/python3.10/site-packages/visual_servo/controller.py", line 32
    def client1_response_callback(response)
                                           ^
SyntaxError: expected ':'

